--- a/slides.ipynb
+++ b/slides.ipynb
@@ -220,7 +220,7 @@
     }
    },
    "source": [
-    "# Jupyter Notebook Slide Deck"
+    "# Cyrus got the hang of this!"
    ]
   },
   {
@@ -234,88 +234,7 @@
     }
    },
    "source": [
-    "1. Perform you analysis of your dataset in a Jupyter Notebook.\n",
-    "2. Mark up the content you want to share in a presentation.\n",
-    "3. Export it to an HTML page which contains an interactive presentation."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false,
-    "nbpresent": {
-     "id": "faad968c-aa99-46da-b57d-883f58dbcb57"
-    },
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "        <iframe\n",
-       "            width=\"100%\"\n",
-       "            height=\"600\"\n",
-       "            src=\"http://slides.com/droste/harbour-front/embed?scrolling=no&frameborder=0\"\n",
-       "            frameborder=\"0\"\n",
-       "            allowfullscreen\n",
-       "        ></iframe>\n",
-       "        "
-      ],
-      "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fb05a323860>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from IPython.display import IFrame\n",
-    "IFrame(\"http://slides.com/droste/harbour-front/embed\", width=\"100%\", height=\"600\", scrolling=\"no\", frameborder=\"0\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "nbpresent": {
-     "id": "2cbf526c-1a21-40ee-a157-fd816f022130"
-    },
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## How To - Basics"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "nbpresent": {
-     "id": "291ee8e1-9e86-4341-9340-01c2c4b9cca6"
-    },
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "### 1. Open up the cell toolbar"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "nbpresent": {
-     "id": "6d65319e-b278-4b2c-afeb-a1d562139c8d"
-    }
-   },
-   "source": [
-    "![](images/slides_1.png)"
+    "no, really!"
    ]
   },
   {
@@ -1107,21 +1026,21 @@
   "anaconda-cloud": {},
   "hide_input": false,
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
